--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,33 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 verbalex-*.tar
 
+# ElixirLS
 .elixir_ls/
+
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
 
